    - support sending and recieving selections on demand. Support reading and writing INCR properties.
    - move declaration of RemoteHostVars from x2gokdriveremote.h to x2gokdriveremote.c.
    - add some support for HTML5 client (like converting pointer cursors to PNG format).
    - fix crashing if client is sending unrequested selection.

  [ Mihai Moldovan ]
  * Initial release:
    - patches.legacy/README.legacy-patches.md: whitespace-only fix.
    - patches.legacy/README.legacy-patches.md: fix markdown syntax.
    - {./,patches.xorg/{common,1.18.4,1.19.{2,6},1.20.{1,4,5}}/}quilt.env: add
      new quilt environment helper mechanism. Should make using quilt a lot
      easier on the developer's machine. Requires SOURCING(!) the quilt.env
      file within a specific versioned sub-directory OR SOURCING(!) the
      top-level quilt.env file and exporting QUILT_PATCHES manually.
    - patches.xorg/common/quilt.env: add trailing slash to QUILT_PATCHES
      variable.
    - patches.xorg/1.20.4/xorg-server-configure-ac.patch: backport
      XORG_VERSION_CURRENT change from
      e0dbca73f11e9aa7a066e748e6d08ba256be69cf / 1.20.5.
    - patches.xorg/1.20.4: add missing/hw/xfree86/common/modeline2c.awk file,
      working around a bug in CentOS 7 and Fedora 30 (possibly others as
      well).
    - patches.xorg/1.20.5: likewise add missing modeline2c.awk file. Actually
      needed for Fedora 30.
    - patches.xorg/1.19.2/xorg-server-configure-ac.patch: backport
      XORG_VERSION_CURRENT change from
      e0dbca73f11e9aa7a066e748e6d08ba256be69cf / 1.20.5.
    - x2gokdrive{remote,selection}.c: warp initializer into another set of
      curly braces until the first POD is reached. Fixes compile errors on
      EPEL 7 and generally systems with older GCC versions. That warning,
      which is turned into an error later on, is generally overly strict,
      since {0} is widely used as an "universal zero initializer" in C,